[gd_scene load_steps=4 format=3 uid="uid://crxqagr0ta650"]

[ext_resource type="PackedScene" uid="uid://dpraptve1pdy4" path="res://Square.tscn" id="1_chfcg"]
[ext_resource type="Script" path="res://main.gd" id="1_o6yt7"]
[ext_resource type="PackedScene" uid="uid://borji0f03374c" path="res://SignalContainer.tscn" id="2_qxpc4"]

[node name="Main" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_o6yt7")
round_count = 15

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.418207, 0.378443, 0.38135, 1)

[node name="Square" parent="." instance=ExtResource("1_chfcg")]

[node name="SignalContainer" parent="." instance=ExtResource("2_qxpc4")]
clip_contents = true
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -215.0
offset_bottom = -38.0
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 40)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -186.22
offset_right = 150.0
offset_bottom = -95.22
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
text = "Start
"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
